--- a/WolvenKit.Bundles/WolvenKit.Bundles.csproj
+++ b/WolvenKit.Bundles/WolvenKit.Bundles.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5BD2292A-24DB-4B4A-A5B1-5D435769C289}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolvenKit.Bundles</RootNamespace>
     <AssemblyName>WolvenKit.Bundles</AssemblyName>
@@ -33,6 +33,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Crc32C.NET, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
@@ -67,6 +70,7 @@
     <Compile Include="BundleItem.cs" />
     <Compile Include="BundleManager.cs" />
     <Compile Include="InvalidFileTypeException.cs" />
+    <Compile Include="Metadata_Store.cs" />
     <Compile Include="MissingCompressionException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
