--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -7,6 +7,7 @@
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.5.1" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.5.1" targetFramework="net461" />
