--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -298,11 +298,11 @@
     <Compile Include="frmAddVariable.Designer.cs">
       <DependentUpon>frmAddVariable.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmBundleExplorer.cs">
+    <Compile Include="frmAssetBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmBundleExplorer.Designer.cs">
-      <DependentUpon>frmBundleExplorer.cs</DependentUpon>
+    <Compile Include="frmAssetBrowser.Designer.cs">
+      <DependentUpon>frmAssetBrowser.cs</DependentUpon>
     </Compile>
     <Compile Include="frmChunkFlowDiagram.cs">
       <SubType>Form</SubType>
@@ -412,8 +412,8 @@
       <DependentUpon>frmAddVariable.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmBundleExplorer.resx">
-      <DependentUpon>frmBundleExplorer.cs</DependentUpon>
+    <EmbeddedResource Include="frmAssetBrowser.resx">
+      <DependentUpon>frmAssetBrowser.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChunkFlowDiagram.resx">
