Implemented OpenIV package format.
- Not the best way of creating them and should be refactored but it works.
- Most of #59 is done. Altought package reading is not yet. A form for creating them needs to be made too.

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -391,6 +391,7 @@
     <Compile Include="SelectChunkArgs.cs" />
     <Compile Include="SortableBindinglist.cs" />
     <Compile Include="Win32.cs" />
+    <Compile Include="WKPackage.cs" />
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
     </EmbeddedResource>
