Major refactor and cleanup and fixes
- fixes #64
- reworked how file managers work so its much better now
- corrected many dumb typos and errors
- moved stuff to their own files and renamed properly the folders

--- a/WolvenKit.Cache/WolvenKit.Cache.csproj
+++ b/WolvenKit.Cache/WolvenKit.Cache.csproj
@@ -59,8 +59,8 @@
     <Compile Include="ImageUtility.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Texture\TextureManager.cs" />
-    <Compile Include="Texture\Texture_Cache.cs" />
+    <Compile Include="TextureCache\TextureManager.cs" />
+    <Compile Include="TextureCache\Texture_Cache.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
