--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -58,9 +58,10 @@
     <Compile Include="BNK\Sections\Unknown.cs" />
     <Compile Include="BNK\SoundFile.cs" />
     <Compile Include="SoundBanksInfo.cs" />
-    <Compile Include="Sound\SoundBanksInfo.cs" />
-    <Compile Include="Sound\SoundManager.cs" />
-    <Compile Include="Sound\Sound_Cache.cs" />
+    <Compile Include="SoundCache\SoundBanksInfo.cs" />
+    <Compile Include="SoundCache\SoundCacheItem.cs" />
+    <Compile Include="SoundCache\SoundManager.cs" />
+    <Compile Include="SoundCache\Sound_Cache.cs" />
     <Compile Include="WEM\ImaAdpcmCodec.cs" />
     <Compile Include="WEM\RiffChunk.cs" />
     <Compile Include="WEM\RiffFile.cs" />
