Implemented CollisionCache reading
- Added it for #5

--- a/WolvenKit.Cache/WolvenKit.Cache.csproj
+++ b/WolvenKit.Cache/WolvenKit.Cache.csproj
@@ -60,6 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollisionCache\CollisionCacheItem.cs" />
+    <Compile Include="CollisionCache\Collision_Cache.cs" />
     <Compile Include="DDSHeader.cs" />
     <Compile Include="DDSImageParser.cs" />
     <Compile Include="ImageUtility.cs" />
