Fixed filename typo

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -175,7 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Apex.cs" />
-    <Compile Include="AssmeblyExtensions.cs" />
+    <Compile Include="AssemblyExtensions.cs" />
     <Compile Include="Commonfunctions.cs" />
     <Compile Include="frmAbout.cs">
       <SubType>Form</SubType>
