--- a/WolvenKit/app.config
+++ b/WolvenKit/app.config
@@ -35,6 +35,14 @@
         <assemblyIdentity name="Tao.OpenGl" publicKeyToken="1ca010269a4501ef" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.7" newVersion="2.1.0.7" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.3.0" newVersion="4.1.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
