--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CyotekImageBox" version="1.2.1" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
-  <package id="DockPanelSuite" version="3.0.0-alpha8" targetFramework="net45" />
-  <package id="DockPanelSuite.ThemeVS2015" version="2.16.1" targetFramework="net461" />
+  <package id="DockPanelSuite" version="3.0.0" targetFramework="net461" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.0.0" targetFramework="net461" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
@@ -12,9 +12,9 @@
   <package id="OpenGL.Net" version="0.5.2" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.5.2" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net461" />
-  <package id="Vlc.DotNet.Core" version="2.1.142" targetFramework="net461" />
-  <package id="Vlc.DotNet.Core.Interops" version="2.1.142" targetFramework="net461" />
-  <package id="Vlc.DotNet.Forms" version="2.1.142" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core" version="2.1.149" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core.Interops" version="2.1.149" targetFramework="net461" />
+  <package id="Vlc.DotNet.Forms" version="2.1.149" targetFramework="net461" />
 </packages>
