Add skeleton to meshes in Renderer

--- a/WolvenKit.Render/WolvenKit.Render.csproj
+++ b/WolvenKit.Render/WolvenKit.Render.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSkeleton.cs" />
     <Compile Include="frmRender.cs">
       <SubType>Form</SubType>
     </Compile>
