--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -4,6 +4,7 @@
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.0" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.0" targetFramework="net461" />
+  <package id="IniParserLTK" version="1.1.5" targetFramework="net461" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
