--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AltoControls" version="1.0.1" targetFramework="net461" />
   <package id="CyotekImageBox" version="1.2.1" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.0" targetFramework="net461" />
