Basic tree reading in flyr files
- The coords don't show yet and writing is not implemented yet but reading works perfectly.

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Editors\PtrEditor.Designer.cs">
       <DependentUpon>PtrEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameEntity\CTree.cs" />
     <Compile Include="HslColor.cs" />
     <Compile Include="IVariableEditor.cs" />
     <Compile Include="ILocalizedStringSource.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Types\CEntity.cs" />
     <Compile Include="Types\CFlags.cs" />
     <Compile Include="Types\CFloat.cs" />
+    <Compile Include="Types\CFoliageResource.cs" />
     <Compile Include="Types\CGUID.cs" />
     <Compile Include="Types\CHandle.cs" />
     <Compile Include="Types\CLocalizedString.cs" />
