--- a/WolvenKit.Cache/packages.config
+++ b/WolvenKit.Cache/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
 </packages>
